--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,6 +4,36 @@
    // For further information visit https://github.com/OmniSharp/omnisharp-vscode/blob/master/debugger-launchjson.md
    "version": "0.2.0",
    "configurations": [
+       {
+           "name": ".NET Core Launch (web)",
+           "type": "coreclr",
+           "request": "launch",
+           "preLaunchTask": "build",
+           "program": "${workspaceFolder}/Avorenium.Web/bin/Debug/netcoreapp2.2/Avorenium.Web.dll",
+           "args": [],
+           "cwd": "${workspaceFolder}/Avorenium.Web",
+           "stopAtEntry": false,
+           "launchBrowser": {
+               "enabled": true,
+               "args": "${auto-detect-url}",
+               "windows": {
+                   "command": "cmd.exe",
+                   "args": "/C start ${auto-detect-url}"
+               },
+               "osx": {
+                   "command": "open"
+               },
+               "linux": {
+                   "command": "xdg-open"
+               }
+           },
+           "env": {
+               "ASPNETCORE_ENVIRONMENT": "Development"
+           },
+           "sourceFileMap": {
+               "/Views": "${workspaceFolder}/Views"
+           }
+       },
         {
             "name": ".NET Core Launch (console)",
             "type": "coreclr",
