--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -6,8 +6,7 @@
             "command": "dotnet",
             "type": "process",
             "args": [
-                "build",
-                "${workspaceFolder}/Avorenium.Tests.Application.Services/Avorenium.Tests.Application.Services.csproj"
+                "build"
             ],
             "problemMatcher": "$msCompile"
         }
