Setup result in application layer

--- a/Avorenium.Core.Domain.Services/Avorenium.Core.Domain.Services.csproj
+++ b/Avorenium.Core.Domain.Services/Avorenium.Core.Domain.Services.csproj
@@ -1,5 +1,10 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
+  <ItemGroup>
+    <ProjectReference Include="..\Avorenium.Core.Domain.Entities\Avorenium.Core.Domain.Entities.csproj" />
+    <ProjectReference Include="..\Avorenium.Core.Domain.Interfaces\Avorenium.Core.Domain.Interfaces.csproj" />
+  </ItemGroup>
+
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
