--- a/Avorenium.Core.Application.Interfaces/Avorenium.Core.Application.Interfaces.csproj
+++ b/Avorenium.Core.Application.Interfaces/Avorenium.Core.Application.Interfaces.csproj
@@ -1,5 +1,9 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
+  <ItemGroup>
+    <ProjectReference Include="..\Avorenium.Core.Domain.Entities\Avorenium.Core.Domain.Entities.csproj" />
+  </ItemGroup>
+
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
