--- a/Avorenium.Web/Avorenium.Web.csproj
+++ b/Avorenium.Web/Avorenium.Web.csproj
@@ -24,6 +24,11 @@
     <None Include="$(SpaRoot)**" Exclude="$(SpaRoot)node_modules\**" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Avorenium.Core.Domain.Entities\Avorenium.Core.Domain.Entities.csproj" />
+    <ProjectReference Include="..\Avorenium.Core.Application.Interfaces\Avorenium.Core.Application.Interfaces.csproj" />
+  </ItemGroup>
+
   <Target Name="DebugEnsureNodeEnv" BeforeTargets="Build" Condition=" '$(Configuration)' == 'Debug' And !Exists('$(SpaRoot)node_modules') ">
     <!-- Ensure Node.js is installed -->
     <Exec Command="node --version" ContinueOnError="true">
