Setup DI, Mapper and refactor results in application layer

--- a/Avorenium.Infrastructure.Mapper/Avorenium.Infrastructure.Mapper.csproj
+++ b/Avorenium.Infrastructure.Mapper/Avorenium.Infrastructure.Mapper.csproj
@@ -1,5 +1,14 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
+  <ItemGroup>
+    <ProjectReference Include="..\Avorenium.Core.Interfaces\Avorenium.Core.Interfaces.csproj" />
+    <ProjectReference Include="..\Avorenium.Core.Domain.Entities\Avorenium.Core.Domain.Entities.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="8.0.0" />
+  </ItemGroup>
+
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
