--- a/Avorenium.Web/Avorenium.Web.csproj
+++ b/Avorenium.Web/Avorenium.Web.csproj
@@ -27,6 +27,7 @@
   <ItemGroup>
     <ProjectReference Include="..\Avorenium.Core.Domain.Entities\Avorenium.Core.Domain.Entities.csproj" />
     <ProjectReference Include="..\Avorenium.Core.Application.Interfaces\Avorenium.Core.Application.Interfaces.csproj" />
+    <ProjectReference Include="..\Avorenium.Dependency.Resolution\Avorenium.Dependency.Resolution.csproj" />
   </ItemGroup>
 
   <Target Name="DebugEnsureNodeEnv" BeforeTargets="Build" Condition=" '$(Configuration)' == 'Debug' And !Exists('$(SpaRoot)node_modules') ">
