--- a/Avorenium.Core.Application.Services/Avorenium.Core.Application.Services.csproj
+++ b/Avorenium.Core.Application.Services/Avorenium.Core.Application.Services.csproj
@@ -3,6 +3,7 @@
   <ItemGroup>
     <ProjectReference Include="..\Avorenium.Core.Application.Interfaces\Avorenium.Core.Application.Interfaces.csproj" />
     <ProjectReference Include="..\Avorenium.Core.Domain.Entities\Avorenium.Core.Domain.Entities.csproj" />
+    <ProjectReference Include="..\Avorenium.Core.Interfaces\Avorenium.Core.Interfaces.csproj" />
   </ItemGroup>
 
   <PropertyGroup>
