--- a/Avorenium.Web/appsettings.json
+++ b/Avorenium.Web/appsettings.json
@@ -4,5 +4,8 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "AvoreniumDbContext": "Host=localhost;Port=5432;Username=avorenium;Password=tnokiw811;Database=avorenium;"
+  }
 }
