--- a/Avorenium.Dependency.Resolution/Avorenium.Dependency.Resolution.csproj
+++ b/Avorenium.Dependency.Resolution/Avorenium.Dependency.Resolution.csproj
@@ -8,14 +8,16 @@
     <ProjectReference Include="..\Avorenium.Core.Interfaces\Avorenium.Core.Interfaces.csproj" />
     <ProjectReference Include="..\Avorenium.Infrastructure.Services\Avorenium.Infrastructure.Services.csproj" />
     <ProjectReference Include="..\Avorenium.Infrastructure.Mapper\Avorenium.Infrastructure.Mapper.csproj" />
+    <ProjectReference Include="..\Avorenium.Infrastructure.Data\Avorenium.Infrastructure.Data.csproj" />
   </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="2.2.0" />
+    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="2.2.0" />
   </ItemGroup>
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFramework>netcoreapp2.2</TargetFramework>
   </PropertyGroup>
 
 </Project>
