--- a/Avorenium.Web/appsettings.Development.json
+++ b/Avorenium.Web/appsettings.Development.json
@@ -5,5 +5,8 @@
       "System": "Information",
       "Microsoft": "Information"
     }
+  },
+  "ConnectionStrings": {
+    "AvoreniumDbContext": "Host=localhost;Port=5432;Username=avorenium;Password=tnokiw811;Database=avorenium;"
   }
 }
